--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ node_js:
 before_script:
   - "sudo pip install pygments"
   - "npm install -g grunt-cli"
+  - "npm install grunt-mocha-cli --save-dev"
