--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-node_modules/
+*.profile
+*.lock
+*.conflict
+*.DS_Store
+*.zip
+*.rdb
+*.log
+
+.project
+.settings
+.idea
+
+*.mo
 *.sublime*
-.DS_Store
-npm-debug.log
+config.json
+config*.json
+deploy.json
+/node_modules
+/_release
+/lib
+/test
