--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: node_js
 node_js:
-  - "0.8"
+  - 0.10
+  - 0.12
+  - 4.0
+  - 4.4
+  - 5.0
+  - 5.5
+  - 5.11
+  - 6.0
+  - 6.1
+  - iojs
+  - nodejs
 before_script:
-  - "sudo pip install pygments"
-  - "npm install -g grunt-cli"
+  - "npm install -g mocha grunt-cli"
+  - "grunt build"
