--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-extractor",
   "description": "Extract meta-data from a html string. It extracts the body, title, meta-tags and first headlines to a object to push them to a search indexer like elastic-search",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "https://github.com/mpneuried/html-extractor",
   "keywords": [
     "html", "parse", "extract", "body", "search", "tool", "elasic"
@@ -30,15 +30,15 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "htmlparser2": "*",
-    "lodash": "*"
+    "htmlparser2": "3.9.x",
+    "lodash": "4.x"
   },
   "devDependencies": {
-    "should": "*",
-    "request": "*",
-    "grunt-regarde": "*",
-    "grunt-contrib-coffee": "0.5.0",
-    "grunt-mocha-cli": "*",
-    "grunt": "~0.4.0"
+    "should": "8.x",
+    "request": "2.x",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-coffee": "1.x",
+    "grunt-mocha-cli": "2.x",
+    "grunt": "1.x"
   }
 }
