--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ node_js:
   - 6.0
   - 6.1
   - iojs
-  - nodejs
+  - node
 before_script:
   - "npm install -g mocha grunt-cli"
   - "grunt build"
